--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Roman Numerals</title>
   </head>
   <body>
     <div class="container">
+      <h1>Roman Numeral Converter</h1>
 
+      <form id="user-input">
+        <div class="form-group">
+          <label for="userInput">Enter a number to convert to Roman numerals:</label>
+          <input id="userInput" type="number">
+        </div>
+
+        <button type="submit" class="btn btn-info">Translate</button>
+      </form>
+
+      <div id="result">
+
+      </div>
     </div>
   </body>
 </html>
